--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 # get api_id & api_hash from my.telegram.org
-api_id: ''
-api_hash: ''
+api_id: '14050586'
+api_hash: '42a60d9c657b106370c79bb0a8ac560c'
 # 13 digit channel id startswith - like -111.......
-dump_id: ''
+dump_id: '-1002281888349'
 # genrate session of ur tg ac for telethon run sessionmaker.py
 string_session: ''
